--- a/src/FUShome.css
+++ b/src/FUShome.css
@@ -1,10 +1,27 @@
-.header{
+.links{
     display: flex;
     position: relative;
-    background-color: blue;
+    background-color: lightblue;
     justify-content: left;
+    flex-direction: column;
 }
 
-.body{
-    background-color: gray;
+h1 {
+    text-align: center;
+    font-size: 300%;
+    color: black;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    padding-left: 10px;
+}
+
+h2 {
+    text-align: left;
+    font-size: 100%;
+    color: black;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    padding-left: 10px;
+}
+
+body{
+    background-color: lightgray;
 }
