--- a/src/FUSeventsignup.css
+++ b/src/FUSeventsignup.css
@@ -11,7 +11,7 @@ h1 {
     color: black;
     padding: 14px;
     font-size: 16px;
-    margin-top: 45px;
+    margin-bottom: 45px;
     border: none;
     cursor: pointer;
     vertical-align: middle;
