--- a/src/FUSnavbar.css
+++ b/src/FUSnavbar.css
@@ -1,3 +1,9 @@
+
 #links {
     display: flex;
+    position: relative;
+    background-color: lightblue;
+    justify-content: space-around;
+    /* flex-direction: column; */
 }
+
