--- a/src/FUSnavbar.css
+++ b/src/FUSnavbar.css
@@ -34,11 +34,19 @@ body {
     display: flex;
     position: relative;
     background-color: var(--color1);
-    justify-content: space-around;
+    justify-content: left;
     padding: 7px;
 }
 
 #navbar #links a {
     color: var(--textcolor1);
+    margin-left: 25px;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+
+#navbar .verticalLine {
+    border-right: 1px solid var(--textcolor1);
+    margin-left: 25px;
+    height: 20px;
 }
 
