--- a/src/FUSeventsignup.css
+++ b/src/FUSeventsignup.css
@@ -3,13 +3,18 @@
     color: white;
     padding: 14px;
     font-size: 16px;
-    margin-bottom: 45px;
     border: none;
     cursor: pointer;
     vertical-align: middle;
 }
+.drop {
+    margin-top: 45px;
+}
   
 .dropbtn:hover, .dropbtn:focus {
+    background-color: rgb(35, 35, 195);
+}
+.dropbtn1:hover, .dropbtn:focus {
     background-color: rgb(35, 35, 195);
 }
   
